--- a/app/src/main/res/layout/input_number.xml
+++ b/app/src/main/res/layout/input_number.xml
@@ -15,9 +15,20 @@
     <EditText
         android:id="@+id/input_number"
         android:hint="输入胸牌号码"
+        android:visibility="invisible"
         android:textColor="#000"
         android:textColorHint="#000"
         android:inputType="number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <CheckBox
+        android:id="@+id/yigong"
+        android:text="义工"
+        android:visibility="invisible"
+        android:checked="false"
+        android:textColor="#000"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
