--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
-
+    <color name="green">#008000</color>
+    <color name="gray">#808080</color>
     <color name="scan_corner_color">#0effc2</color>
 </resources>
